[package]
name = "dy"
description = "Quickly generate a delightful, light, and human readable/writable syntax"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[lib]
name = "dy"

[dependencies]
thiserror = { workspace = true }
lsp-types = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
typeshare = "1.0.4"
serde_with = "3.14.0"
colored = "3.0.0"

[dev-dependencies]
# Note: the no-color feature disable the ANSI colors, only for testing, because that's annoying to have unit tests with ANSI codes in expected strings
colored = { version = "3.0.0", features = ["no-color"] }
ntest = "0.9.3"
pretty_assertions = "1.4.1"
